fix: adjust position of edit post pen for improved alignment

--- a/styles.css
+++ b/styles.css
@@ -1687,7 +1687,7 @@ form textarea {
     #edit-post-pen {
         position: absolute;
         top: 10px;
-        right: 70px;
+        right: 50px;
         font-size: 1rem;
     }
 }
